--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -2,7 +2,7 @@
     <div class="container mx-auto md:flex md:items-center md:justify-between">
         <div class="flex justify-between items-center">
             <span class="text-2xl font-bold text-violet-800">
-                TESTIMONY
+                SHARE
             </span>
 
             <span class="text-3xl cursor-pointer block md:hidden">
