--- a/views/login.hbs
+++ b/views/login.hbs
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Share - Register</title>
+    <title>Share - Login</title>
 </head>
 <body>
     <section class="conatiner mx-auto px-4 md:px-auto flex items-center justify-center h-screen">
         <div class="border border-gray-200 shadow-md p-5 rounded flex flex-col space-y-7 md:w-2/4 lg:w-2/6 xl:max-w-lg">
             <div class="text-3xl text-violet-800 font-bold text-center underline">
-                Join the family
+                Login
             </div>
             <form action="#" class="flex flex-col text-center md:text-left">
                 
@@ -20,27 +20,16 @@
                     </label>
                     <input type="email" id="email" name="email" class="rounded border border-gray-300 focus:border-violet-800" >
                 </div>
-                <div class="flex flex-col my-2">
-                    <label for="name">
-                        Full name
-                    </label>
-                    <input type="text" id="name" name="name" class="rounded border border-gray-300 focus:border-violet-800">
-                </div>
+
                 <div class="flex flex-col my-2">
                     <label for="password">
                         Password
                     </label>
-                    <input type="password" id="password" name="password" class="rounded border border-gray-300 focus:border-violet-800" placeholder="Enter a strong password...">
-                </div>
-                <div class="flex flex-col mt-2 mb-4">
-                    <label for="confirm_password">
-                        Confirm password
-                    </label>
-                    <input type="password" id="confirm_password" name="confirm_password" class="rounded border border-gray-300 focus:border-violet-800" placeholder="Re-enter password...">
+                    <input type="password" id="password" name="password" class="rounded border border-gray-300 focus:border-violet-800">
                 </div>
                 
                 <button class="bg-violet-800 rounded-full text-white py-2 mt-4 mb-2">
-                    Register
+                    Login
                 </button>
             </form>
         </div>
