--- a/views/register.hbs
+++ b/views/register.hbs
@@ -12,7 +12,7 @@
             <div class="text-3xl text-violet-800 font-bold text-center underline">
                 Join the family
             </div>
-            <form action="#" class="flex flex-col text-center md:text-left">
+            <form action="/register" method="POST" class="flex flex-col text-center md:text-left">
                 
                 <div class="flex flex-col my-2">
                     <label for="email">
@@ -39,7 +39,7 @@
                     <input type="password" id="confirm_password" name="confirm_password" class="rounded border border-gray-300 focus:border-violet-800" placeholder="Re-enter password...">
                 </div>
                 
-                <button class="bg-violet-800 rounded-full text-white py-2 mt-4 mb-2">
+                <button type="submit" class="bg-violet-800 rounded-full text-white py-2 mt-4 mb-2">
                     Register
                 </button>
             </form>
