--- a/views/login.hbs
+++ b/views/login.hbs
@@ -8,6 +8,11 @@
 </head>
 <body>
     <section class="conatiner mx-auto px-4 md:px-auto flex items-center justify-center h-screen">
+        {{#if message}}
+            <p class="text-green-700">
+                {{ message.sucess }}
+            </p>
+        {{/if}}
         <div class="border border-gray-200 shadow-md p-5 rounded flex flex-col space-y-7 md:w-2/4 lg:w-2/6 xl:max-w-lg">
             <div class="text-3xl text-violet-800 font-bold text-center underline">
                 Login
@@ -34,5 +39,11 @@
             </form>
         </div>
     </section>
+
+    <script>
+        if (message){
+            alert(message.success)
+        }
+    </script>
 </body>
 </html>
