--- a/views/register.hbs
+++ b/views/register.hbs
@@ -11,7 +11,7 @@
     <section class="conatiner mx-auto px-4 md:px-auto flex flex-col items-center justify-center h-screen">
         {{#if message}}
             <p class="text-orange-700">
-                {{ message.message }}
+                {{ message.error_message }}
             </p>
         {{/if}}
         <div class="border border-gray-200 shadow-md p-5 rounded flex flex-col space-y-7 md:w-2/4 lg:w-2/6 xl:max-w-lg">
