--- a/views/login.hbs
+++ b/views/login.hbs
@@ -19,11 +19,23 @@
                 </div>
             </div>
         {{/if}}
+        {{!-- Errors --}}
+        {{#if messages.error}}
+            <div class="flex space-x-2 px-4 py-2 mb-4 text-sm text-red-700 bg-red-100 rounded-lg items-center justify-center" role="alert">
+                <div class="text-lg pt-1">
+                        <ion-icon name="information-circle-outline"></ion-icon>
+                </div>
+                <span class="sr-only">Info</span>
+                <div>
+                    <span class="font-medium">{{ messages.error }}</span> 
+                </div>
+            </div>
+        {{/if}}
         <div class="border border-gray-200 shadow-md p-5 rounded flex flex-col space-y-7 md:w-2/4 lg:w-2/6 xl:max-w-lg">
             <div class="text-3xl text-violet-800 font-bold text-center underline">
                 Login
             </div>
-            <form action="#" class="flex flex-col text-center md:text-left">
+            <form action="/login" method="POST" class="flex flex-col text-center md:text-left">
                 
                 <div class="flex flex-col my-2">
                     <label for="email">
