--- a/views/partials/_auth_header.hbs
+++ b/views/partials/_auth_header.hbs
@@ -14,12 +14,16 @@
         
 
             <li class="mb-3 hover:text-violet-600 hover:underline md:my-0">
-                <a href="/login" class="">Logout</a>
+                <a href="/testimonies" class="">Testimonies</a>
+            </li>
+            
+            <li class="mb-3 hover:text-violet-600 hover:underline md:my-0">
+                <a href="/profile" class="">Profile</a>
             </li>
 
-            <a href="/register" class="bg-violet-800 text-white rounded px-5 py-2 my-2 hover:bg-violet-600 md:my-0">
-                Register
-            </a>
+            <form class="bg-violet-800 text-white rounded px-5 py-2 my-2 hover:bg-violet-600 md:my-0" action="/logout?_method=DELETE" method="POST">
+                <button type="submit">Logout</button>
+            </form>
         </ul>
     </div>
 </nav>
