--- a/views/partials/_auth_header.hbs
+++ b/views/partials/_auth_header.hbs
@@ -1,9 +1,11 @@
 <nav class="p-5 bg-white shadow">
     <div class="container mx-auto md:flex md:items-center md:justify-between">
         <div class="flex justify-between items-center">
-            <span class="text-2xl font-bold text-violet-800">
-                SHARE
-            </span>
+            <a href="/testimonies">
+                <span class="text-2xl font-bold text-violet-800">
+                    SHARE
+                </span>
+            </a>
 
             <span class="text-3xl cursor-pointer block md:hidden">
                 <ion-icon name="menu" onclick="Menu(this)"></ion-icon>
