--- a/views/login.hbs
+++ b/views/login.hbs
@@ -41,14 +41,14 @@
                     <label for="email">
                         Email
                     </label>
-                    <input type="email" id="email" name="email" class="rounded border border-gray-300 focus:border-violet-800" >
+                    <input type="email" id="email" name="email" class="rounded border border-gray-300 focus:border-violet-800" required>
                 </div>
 
                 <div class="flex flex-col my-2">
                     <label for="password">
                         Password
                     </label>
-                    <input type="password" id="password" name="password" class="rounded border border-gray-300 focus:border-violet-800">
+                    <input type="password" id="password" name="password" class="rounded border border-gray-300 focus:border-violet-800" required>
                 </div>
                 
                 <button class="bg-violet-800 rounded-full text-white py-2 mt-4 mb-2">
