--- a/views/register.hbs
+++ b/views/register.hbs
@@ -30,25 +30,25 @@
                     <label for="email">
                         Email
                     </label>
-                    <input type="email" id="email" name="email" class="rounded border border-gray-300 focus:border-violet-800" >
+                    <input type="email" id="email" name="email" class="rounded border border-gray-300 focus:border-violet-800" required>
                 </div>
                 <div class="flex flex-col my-2">
                     <label for="name">
                         Full name
                     </label>
-                    <input type="text" id="name" name="name" class="rounded border border-gray-300 focus:border-violet-800">
+                    <input type="text" id="name" name="name" class="rounded border border-gray-300 focus:border-violet-800" required>
                 </div>
                 <div class="flex flex-col my-2">
                     <label for="password">
                         Password
                     </label>
-                    <input type="password" id="password" name="password" class="rounded border border-gray-300 focus:border-violet-800" placeholder="Enter a strong password...">
+                    <input type="password" id="password" name="password" class="rounded border border-gray-300 focus:border-violet-800" placeholder="Enter a strong password..." required>
                 </div>
                 <div class="flex flex-col mt-2 mb-4">
                     <label for="confirm_password">
                         Confirm password
                     </label>
-                    <input type="password" id="confirm_password" name="confirm_password" class="rounded border border-gray-300 focus:border-violet-800" placeholder="Re-enter password...">
+                    <input type="password" id="confirm_password" name="confirm_password" class="rounded border border-gray-300 focus:border-violet-800" placeholder="Re-enter password..." required>
                 </div>
                 
                 <button type="submit" class="bg-violet-800 rounded-full text-white py-2 mt-4 mb-2">
