--- a/public/css/output.css
+++ b/public/css/output.css
@@ -770,6 +770,10 @@ select {
   z-index: 2;
 }
 
+.z-40 {
+  z-index: 40;
+}
+
 .float-right {
   float: right;
 }
@@ -878,6 +882,10 @@ select {
 
 .max-w-md {
   max-width: 28rem;
+}
+
+.flex-shrink-0 {
+  flex-shrink: 0;
 }
 
 .cursor-pointer {
