--- a/views/partials/_footer.hbs
+++ b/views/partials/_footer.hbs
@@ -1,4 +1,4 @@
-<footer class="mt-10 bg-violet-800">
+<footer class="mt-10 bg-gradient-to-r from-violet-900 to-violet-600">
     <div class="container mx-auto px-4 md:px-auto flex flex-col items-center justify-center py-10">
         <p class="text-white">Copyright &copy; Share.com 2022</p>
         <p class="text-gray-400"><small>Property of Appiatu Group of Companies Int.</small></p>
